--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	<body class="w100vw maxW100vw minH100vh">
         <div id="logo-wrapper">
             <img class="imgFormat" src="assets/imgs/Kboard.png" alt="Kboards logo">
+            <p id="weAre">We&nbsp;are</p>
+            <div id="andWe" class="flex row noWrap">
+                <p>and&nbsp;we&nbsp;<span id="wordsSpan"></span></p>
+                <div id="cursor"></div>
+            </div>
         </div>
         <div id="stick-left" class="stick"></div>
         <div id="stick-right" class="stick"></div>
-        <p id="weAre">We are</p>
-        <div id="andWe" class="flex row noWrap">
-            <p>and we&nbsp;<span id="wordsSpan"></span></p>
-            <div id="cursor"></div>
-        </div>
         
     </body>
 </html>
