remove s from title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="We are Kboards">
+		<meta name="description" content="We are Kboard">
         <title>Kboards</title>
         <link rel="stylesheet" type="text/css" href="css/lib.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
