--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="We are Kboard">
-        <title>Kboards</title>
+        <title>Kboard</title>
         <link rel="stylesheet" type="text/css" href="css/lib.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
