--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="imgFormat" src="assets/imgs/Kboard.png" alt="Kboards logo">
             <p id="weAre">We&nbsp;are</p>
             <div id="andWe" class="flex row noWrap">
-                <p>and&nbsp;we&nbsp;<span id="wordsSpan"></span></p>
+                <p>and&nbsp;we&nbsp;are&nbsp;<span id="wordsSpan"></span></p>
                 <div id="cursor"></div>
             </div>
         </div>
